--- a/src/templates/2_UZ_ChildDI_Children_in_boarding_schools_en.html
+++ b/src/templates/2_UZ_ChildDI_Children_in_boarding_schools_en.html
@@ -124,14 +124,14 @@
             <div>
                 <select id="omr10" name="omr10" class="border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100">
                     <option value="-9" class="t_choose">--- choose ---</option>
-                    <option value="1">1. Type I - boarding schools for deaf children.</option>
-                    <option value="2">2. Type II - boarding schools for the hearing-impaired and those who later will lose their hearing.</option>
-                    <option value="3">3. Type III - &quot;Noorli Maskan&quot; specialized boarding schools for blind children.</option>
-                    <option value="4">4. Type IV - &quot;Noorli Maskan&quot; specialized boarding schools for visually impaired and those who later will lose their vision.</option>
-                    <option value="5">5. Type V - boarding schools for children with severe speech disorders.</option>
-                    <option value="6">6. Type VI - boarding schools for children with musculoskeletal disorders.</option>
-                    <option value="7">7. Type VII - boarding schools for children with mental retardation.</option>
-                    <option value="8">8. Type VIII - supporting boarding schools for mentally retarded children.</option>
+                    <option value="21">1. Type I - boarding schools for deaf children.</option>
+                    <option value="22">2. Type II - boarding schools for the hearing-impaired and those who later will lose their hearing.</option>
+                    <option value="23">3. Type III - &quot;Noorli Maskan&quot; specialized boarding schools for blind children.</option>
+                    <option value="24">4. Type IV - &quot;Noorli Maskan&quot; specialized boarding schools for visually impaired and those who later will lose their vision.</option>
+                    <option value="25">5. Type V - boarding schools for children with severe speech disorders.</option>
+                    <option value="26">6. Type VI - boarding schools for children with musculoskeletal disorders.</option>
+                    <option value="27">7. Type VII - boarding schools for children with mental retardation.</option>
+                    <option value="28">8. Type VIII - supporting boarding schools for mentally retarded children.</option>
                 </select>
             </div>
         </div>
@@ -270,7 +270,7 @@
                 </div>
                 <div class="flex items-center">
                     <input id="lk15-5" type="radio" value="5" name="lk15" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                    <label for="lk15-5" class="ms-2 text-sm text-gray-900">5. Another state employee </label>
+                    <label for="lk15-5" class="ms-2 text-sm text-gray-900">5. Another state employee</label>
                 </div>
                 <div class="flex items-center">
                     <input id="lk15-6" type="radio" value="6" name="lk15" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
@@ -862,7 +862,7 @@
                 </div>
                 <div class="flex items-center">
                     <input id="cm7b-4" type="radio" value="3" name="cm7b" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                    <label for="cm7b-4" class="ms-2 text-sm text-gray-900">3. Unfinished specialized secondary</label>
+                    <label for="cm7b-4" class="ms-2 text-sm text-gray-900">3. Unfinished specialized secondary/vocational education</label>
                 </div>
                 <div class="flex items-center">
                     <input id="cm7b-5" type="radio" value="4" name="cm7b" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
@@ -1341,7 +1341,7 @@
                 </div>
                 <div class="flex items-center">
                     <input id="ct7b-4" type="radio" value="3" name="ct7b" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                    <label for="ct7b-4" class="ms-2 text-sm text-gray-900">3. Unfinished specialized secondary</label>
+                    <label for="ct7b-4" class="ms-2 text-sm text-gray-900">3. Unfinished specialized secondary/vocational education</label>
                 </div>
                 <div class="flex items-center">
                     <input id="ct7b-5" type="radio" value="4" name="ct7b" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
@@ -1579,8 +1579,7 @@
             </div>
         </div>
 
-        <p class="mt-10 italic text-red-500">This following section is to be filled in only in a situation where, prior to be admitted in the boarding school, the child was cared for by a person other than his/her mother or father. Otherwise, skip to Section 4.</p>
-
+        
         <h3 class="text-xl font-semibold bg-gray-100 px-2 py-1 text-gray-700 mt-10">3.3. THE PERSON WHO WAS TAKING CARE OF THE CHILD</h3>
 
         <div class="grid grid-cols-2 gap-4 items-center mt-6">
@@ -1800,7 +1799,7 @@
         </div>
         <div class="grid grid-cols-2 gap-4 items-center mt-10">
             <div>
-                CT6c. What group of disability does the person have?            </div>
+                CG6c. What group of disability does the person have?            </div>
             <div class="col-span-1 flex flex-col gap-2">
                 <div class="flex items-center">
                     <input id="cg6c-1" type="radio" value="0" name="cg6c" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
@@ -1822,7 +1821,7 @@
         </div>
         <div class="grid grid-cols-2 gap-4 items-center mt-10">
             <div>
-                CG7b. Caregiver&#39;s level of education            </div>
+                CG7b. Caregiver&#39;s current education            </div>
             <div class="col-span-1 flex flex-col gap-2">
                 <div class="flex items-center">
                     <input id="cg7b-1" type="radio" value="0" name="cg7b" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
@@ -2075,7 +2074,7 @@
         <h2 class="mt-10 mb-4 text-2xl font-bold text-gray-700">4. THE CHILD&#39;S ADMISSION INTO THE SPECIALIZED EDUCATIONAL INSTITUTION</h2>
 
         <div class="grid grid-cols-2 gap-4 items-center mt-6">
-            <div>SA1. Date of the child&#39;s admission into the specialized educational institution Day / Month / Year</div>
+            <div>SA1. Date of the child&#39;s admission into the current specialized educational institution</div>
             <div>
                 <input type="text" id="sa1" name="sa1" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
             </div>
@@ -2086,7 +2085,7 @@
         <input type="hidden" id="sa1m" name="sa1m" />
 
         <div class="grid grid-cols-2 gap-4 items-center mt-6">
-            <div>SA1a. Child&#39;s age upon his/her first admission into the system</div>
+            <div>SA1a. Child&#39;s age upon his/her first admission into the current educational institution</div>
             <div>
                 <input type="text" id="sa1a" name="sa1a" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
             </div>
@@ -2221,7 +2220,9 @@
         </div>
 
         <div class="grid grid-cols-2 gap-4 items-center mt-6">
-            <div>2b. What grade was the child in?</div>
+            <div>
+                2b. What grade was the child in?                <small class="mb-1 block italic text-red-500">FILL IN 0 (ZERO) FOR PREPARATORY CLASS</small>
+            </div>
             <div>
                 <input type="text" id="qeduc2b" name="qeduc2b" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
             </div>
@@ -3072,8 +3073,7 @@
         <div class="grid grid-cols-2 gap-4 items-center mt-6">
             <div>
                 SCH2. Currently, in which grade is the child?                <small class="block italic mt-2">FILL IN 0 (ZERO) FOR PREPARARTORY CLASS</small>
-                <small class="block italic mt-2">FILL IN IF GRADE &gt;=8, ELSE SKIP TO CEDU</small>
-            </div>
+                            </div>
             <div>
                 <input type="text" id="sch2" name="sch2" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
             </div>
@@ -4047,8 +4047,7 @@
 
         <div class="grid grid-cols-2 gap-4 items-center mt-10">
             <div>
-                <small class="mt-2 block italic text-red-500">IF MENTAL DISABILITY IS CHECKED IN LK22_2</small>
-                LK22_2m. According to the certificate, what degree of mental disability does the child have?            </div>
+                                LK22_2m. According to the certificate, what degree of mental disability does the child have?            </div>
             <div class="col-span-1 flex flex-col gap-2">
                 <div class="flex items-center">
                     <input id="lk22_2m-1" type="radio" value="1" name="lk22_2m" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
@@ -5461,7 +5460,7 @@
 
         <div class="grid grid-cols-2 gap-4 mt-6">
             <div>
-                SQ5. In the past six months, did the child benefit from independent living activities?                <small class="block mt-2 italic text-red-500">
+                SQ5. In the past six months, did the child participate in independent living activities?                <small class="block mt-2 italic text-red-500">
                     Independent living activities include tasks such as food preparation and serving, cleaning, using the washing machine, ironing or arranging clothes, going shopping, being able to use money and manage a budget, etc.                </small>
             </div>
             <div class="col-span-1 flex items-center gap-4">
