--- a/src/templates/2_UZ_ChildDI_Children_in_boarding_schools_uz.html
+++ b/src/templates/2_UZ_ChildDI_Children_in_boarding_schools_uz.html
@@ -124,14 +124,14 @@
             <div>
                 <select id="omr10" name="omr10" class="border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100">
                     <option value="-9" class="t_choose">--- choose ---</option>
-                    <option value="1">1. I tur - kar bolalar uchun internatlar.</option>
-                    <option value="2">2. II tur - eshitish qobiliyati zaif va kelgusida eshitish qobiliyatini yo&#39;qotadiganlar uchun internatlar.</option>
-                    <option value="3">3. III tur - &quot;Nurli maskan&quot; ko&#39;zi ojiz bolalar uchun ixtisoslashtirilgan maktab-internatlari.</option>
-                    <option value="4">4. IV tur - ko&#39;zi ojiz va keyinchalik ko&#39;rish qobiliyatini yo&#39;qotadiganlar uchun &quot;Noorli maskan&quot; ixtisoslashtirilgan maktab-internatlari.</option>
-                    <option value="5">5. V tur - og&#39;ir nutq buzilishi bo&#39;lgan bolalar uchun internatlar.</option>
-                    <option value="6">6. VI tur - tayanch-harakat apparati nuqsonlari bo&#39;lgan bolalar uchun internatlar.</option>
-                    <option value="7">7. VII tur - aqli zaif bolalar maktab-internatlari.</option>
-                    <option value="8">8. VIII tur - aqli zaif bolalar maktab-internatlarini qo&#39;llash.</option>
+                    <option value="21">1. I tur - kar bolalar uchun internatlar.</option>
+                    <option value="22">2. II tur - eshitish qobiliyati zaif va kelgusida eshitish qobiliyatini yo&#39;qotadiganlar uchun internatlar.</option>
+                    <option value="23">3. III tur - &quot;Nurli maskan&quot; ko&#39;zi ojiz bolalar uchun ixtisoslashtirilgan maktab-internatlari.</option>
+                    <option value="24">4. IV tur - ko&#39;zi ojiz va keyinchalik ko&#39;rish qobiliyatini yo&#39;qotadiganlar uchun &quot;Noorli maskan&quot; ixtisoslashtirilgan maktab-internatlari.</option>
+                    <option value="25">5. V tur - og&#39;ir nutq buzilishi bo&#39;lgan bolalar uchun internatlar.</option>
+                    <option value="26">6. VI tur - tayanch-harakat apparati nuqsonlari bo&#39;lgan bolalar uchun internatlar.</option>
+                    <option value="27">7. VII tur - aqli zaif bolalar maktab-internatlari.</option>
+                    <option value="28">8. VIII tur - aqli zaif bolalar maktab-internatlarini qo&#39;llash.</option>
                 </select>
             </div>
         </div>
@@ -266,15 +266,15 @@
                 </div>
                 <div class="flex items-center">
                     <input id="lk15-4" type="radio" value="4" name="lk15" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                    <label for="lk15-4" class="ms-2 text-sm text-gray-900">4. Other staff of the institution</label>
+                    <label for="lk15-4" class="ms-2 text-sm text-gray-900">4. Muassasaning boshqa hodimi</label>
                 </div>
                 <div class="flex items-center">
                     <input id="lk15-5" type="radio" value="5" name="lk15" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                    <label for="lk15-5" class="ms-2 text-sm text-gray-900">5. Another state employee </label>
+                    <label for="lk15-5" class="ms-2 text-sm text-gray-900">5. Davlat xizmatchilaridan bo&#39;gan boshqa kishi</label>
                 </div>
                 <div class="flex items-center">
                     <input id="lk15-6" type="radio" value="6" name="lk15" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                    <label for="lk15-6" class="ms-2 text-sm text-gray-900">4. Boshqasi bo&#39;lsa, ko&#39;rsatilsin</label>
+                    <label for="lk15-6" class="ms-2 text-sm text-gray-900">6. Boshqasi bo&#39;lsa, ko&#39;rsatilsin</label>
                 </div>
                 <div class="flex items-center">
                     <input type="text" id="lk15_other" name="lk15_other" class="bg-white disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5" />
@@ -1579,8 +1579,7 @@
             </div>
         </div>
 
-        <p class="mt-10 italic text-red-500">Ushbu bo&#39;lim, agar bola maktab-internatga qabul qilinishdan oldin, o&#39;z onasi yoki otasi emas, balki boshqa birovning qaramog&#39;ida bo&#39;lgan holatda to&#39;ldirilishi zarur. Aks holda, 4-bo&#39;limga o&#39;ting. </p>
-
+        
         <h3 class="text-xl font-semibold bg-gray-100 px-2 py-1 text-gray-700 mt-10">3.3. BOLAGA G&#39;AMHO&#39;RLIK QILGAN SHAXS</h3>
 
         <div class="grid grid-cols-2 gap-4 items-center mt-6">
@@ -1800,7 +1799,7 @@
         </div>
         <div class="grid grid-cols-2 gap-4 items-center mt-10">
             <div>
-                CT6c. Shaxs qaysi guruh nogironligiga ega?            </div>
+                CG6c. Shaxs qaysi guruh nogironligiga ega?            </div>
             <div class="col-span-1 flex flex-col gap-2">
                 <div class="flex items-center">
                     <input id="cg6c-1" type="radio" value="0" name="cg6c" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
@@ -2221,7 +2220,9 @@
         </div>
 
         <div class="grid grid-cols-2 gap-4 items-center mt-6">
-            <div>2b. Bola qaysi sinfda o&#39;qigan edi?</div>
+            <div>
+                2b. Bola qaysi sinfda o&#39;qigan edi?                <small class="mb-1 block italic text-red-500">TAYYORLOV GURUHI UCHUN 0 ( NOL) QO&#39;YING</small>
+            </div>
             <div>
                 <input type="text" id="qeduc2b" name="qeduc2b" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
             </div>
@@ -3072,8 +3073,7 @@
         <div class="grid grid-cols-2 gap-4 items-center mt-6">
             <div>
                 SCH2. Hozirda bola qaysi sinfda o&#39;qiydi?                <small class="block italic mt-2">TAYYORLOV GURUHI UCHUN 0 ( NOL) QO&#39;YING</small>
-                <small class="block italic mt-2">AGAR &gt;=8 SINF BO&#39;LSA TO&#39;LDIRING, AKS HOLATDA CEDUga O&#39;TILSIN</small>
-            </div>
+                            </div>
             <div>
                 <input type="text" id="sch2" name="sch2" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
             </div>
@@ -4047,8 +4047,7 @@
 
         <div class="grid grid-cols-2 gap-4 items-center mt-10">
             <div>
-                <small class="mt-2 block italic text-red-500">AGAR LK22_2 DA PSIXIK ZAIFLIK BELGILANGAN BO&#39;LSA</small>
-                LK22-2m. Nogironlik to&#39;g&#39;risidagi ma&#39;lumotnomaga ko&#39;ra, bolada ruhiy zaiflikning qaysi darajasi mavjud?            </div>
+                                LK22-2m. Nogironlik to&#39;g&#39;risidagi ma&#39;lumotnomaga ko&#39;ra, bolada ruhiy zaiflikning qaysi darajasi mavjud?            </div>
             <div class="col-span-1 flex flex-col gap-2">
                 <div class="flex items-center">
                     <input id="lk22_2m-1" type="radio" value="1" name="lk22_2m" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
