reformatare dupa Excel

--- a/src/templates/R/01_cpis.html
+++ b/src/templates/R/01_cpis.html
@@ -1974,15 +1974,15 @@
             </div>
 
             <div class="divclass mt-6">
-                <div class="col-span-1">CGAD. At the time of the child's entry into the childcare system, was the caregiver alive or deceased?</div>
+                <div class="col-span-1">{{T1504}}. {{T1505}}</div>
                 <div class="col-span-1 flex gap-4">
                     <div class="flex items-center">
                         <input type="radio" id="cgad-1" name="cgad" value="{{cgad-1}}" class="valueclass">
-                        <label for="cgad-1" class="labelclass">1. Alive</label>
+                        <label for="cgad-1" class="labelclass">{{T1506}}</label>
                     </div>
                     <div class="flex items-center">
                         <input type="radio" id="cgad-2" name="cgad" value="{{cgad-2}}" class="valueclass">
-                        <label for="cgad-2" class="labelclass">2. Deceased</label>
+                        <label for="cgad-2" class="labelclass">{{T1507}}</label>
                     </div>
                 </div>
             </div>
