--- a/src/templates/R/01_cpis.html
+++ b/src/templates/R/01_cpis.html
@@ -441,16 +441,16 @@
                 <div>{{T0136}}. {{T0137}}</div>
                 <div>
                     <select id="cm4" name="cm4" class="selectclass">
-                        <option value="{cm4-1}}">{{T0138}}</option>
-                        <option value="{cm4-2}}">{{T0139}}</option>
-                        <option value="{cm4-3}}">{{T0140}}</option>
-                        <option value="{cm4-4}}">{{T0141}}</option>
-                        <option value="{cm4-5}}">{{T0142}}</option>
-                        <option value="{cm4-6}}">{{T0143}}</option>
-                        <option value="{cm4-7}}">{{T0144}}</option>
-                        <option value="{cm4-8}}">{{T0145}}</option>
-                        <option value="{cm4-9}}">{{T0146}}</option>
-                        <option value="{cm4-10}}">{{T0147}}</option>
+                        <option value="{{cm4-1}}">{{T0138}}</option>
+                        <option value="{{cm4-2}}">{{T0139}}</option>
+                        <option value="{{cm4-3}}">{{T0140}}</option>
+                        <option value="{{cm4-4}}">{{T0141}}</option>
+                        <option value="{{cm4-5}}">{{T0142}}</option>
+                        <option value="{{cm4-6}}">{{T0143}}</option>
+                        <option value="{{cm4-7}}">{{T0144}}</option>
+                        <option value="{{cm4-8}}">{{T0145}}</option>
+                        <option value="{{cm4-9}}">{{T0146}}</option>
+                        <option value="{{cm4-10}}">{{T0147}}</option>
                     </select>
                 </div>
             </div>
@@ -3237,8 +3237,8 @@
                         <label for="qeduc2-2" class="labelclass">{{T0764}}</label>
                     </div>
                     <div class="flex items-center">
-                        <input type="radio" disabled id="qeduc2-7-disabled" name="qeduc2disabled" value="{{qeduc2disabled-}}" class="valueclass">
-                        <label for="qeduc2-7-disabled" class="labelclass">{{T0765}}</label>
+                        <input type="radio" id="qeduc2-7" name="qeduc2disabled" value="{{qeduc2-7}}" class="valueclass">
+                        <label for="qeduc2-7" class="labelclass">{{T0765}}</label>
                     </div>
                 </div>
             </div>
@@ -5468,7 +5468,7 @@
                 <div class="ml-3">{{T1271}}. {{T1272}}</div>
                 <select id="dvi10" name="dvi10" class="selectclass">
                     <option value="-9">{{T1511}}</option>
-                    <option value="1{{dvi10-1}} >{{T1509}}</option>
+                    <option value="{{dvi10-1}} >{{T1509}}</option>
                     <option value="2">2</option>
                     <option value="3">3</option>
                     <option value="4">4</option>
@@ -5485,7 +5485,7 @@
                 <div class="ml-3">{{T1275}}. {{T1276}}</div>
                 <select id="dvi11" name="dvi11" class="selectclass">
                     <option value="-9">{{T1511}}</option>
-                    <option value="1{{dvi11-1}} >{{T1509}}</option>
+                    <option value="{{dvi11-1}} >{{T1509}}</option>
                     <option value="2">2</option>
                     <option value="3">3</option>
                     <option value="4">4</option>
@@ -5502,7 +5502,7 @@
                 <div class="ml-3">{{T1279}}. {{T1280}}</div>
                 <select id="dvi12" name="dvi12" class="selectclass">
                     <option value="-9">{{T1511}}</option>
-                    <option value="1{{dvi12-1}} >{{T1509}}</option>
+                    <option value="{{dvi12-1}} >{{T1509}}</option>
                     <option value="2">2</option>
                     <option value="3">3</option>
                     <option value="4">4</option>
@@ -5519,7 +5519,7 @@
                 <div class="ml-3">{{T1283}}. {{T1284}}</div>
                 <select id="dvi13" name="dvi13" class="selectclass">
                     <option value="-9">{{T1511}}</option>
-                    <option value="1{{dvi13-1}} >{{T1509}}</option>
+                    <option value="{{dvi13-1}} >{{T1509}}</option>
                     <option value="2">2</option>
                     <option value="3">3</option>
                     <option value="4">4</option>
@@ -5536,7 +5536,7 @@
                 <div class="ml-3">{{T1287}}. {{T1288}}</div>
                 <select id="dvi14" name="dvi14" class="selectclass">
                     <option value="-9">{{T1511}}</option>
-                    <option value="1{{dvi14-1}} >{{T1509}}</option>
+                    <option value="{{dvi14-1}} >{{T1509}}</option>
                     <option value="2">2</option>
                     <option value="3">3</option>
                     <option value="4">4</option>
@@ -5553,7 +5553,7 @@
                 <div class="ml-3">{{T1291}}. {{T1292}}</div>
                 <select id="dvi15" name="dvi15" class="selectclass">
                     <option value="-9">{{T1511}}</option>
-                    <option value="1{{dvi15-1}} >{{T1509}}</option>
+                    <option value="{{dvi15-1}} >{{T1509}}</option>
                     <option value="2">2</option>
                     <option value="3">3</option>
                     <option value="4">4</option>
@@ -5570,7 +5570,7 @@
                 <div class="ml-3">{{T1295}}. {{T1296}}</div>
                 <select id="dvi16" name="dvi16" class="selectclass">
                     <option value="-9">{{T1511}}</option>
-                    <option value="1{{dvi16-1}} >{{T1509}}</option>
+                    <option value="{{dvi16-1}} >{{T1509}}</option>
                     <option value="2">2</option>
                     <option value="3">3</option>
                     <option value="4">4</option>
@@ -5587,7 +5587,7 @@
                 <div class="ml-3">{{T1299}}. {{T1300}}</div>
                 <select id="dvi17" name="dvi17" class="selectclass">
                     <option value="-9">{{T1511}}</option>
-                    <option value="1{{dvi17-1}} >{{T1509}}</option>
+                    <option value="{{dvi17-1}} >{{T1509}}</option>
                     <option value="2">2</option>
                     <option value="3">3</option>
                     <option value="4">4</option>
@@ -5604,7 +5604,7 @@
                 <div class="ml-3">{{T1303}}. {{T1304}}</div>
                 <select id="dvi18" name="dvi18" class="selectclass">
                     <option value="-9">{{T1511}}</option>
-                    <option value="1{{dvi18-1}} >{{T1509}}</option>
+                    <option value="{{dvi18-1}} >{{T1509}}</option>
                     <option value="2">2</option>
                     <option value="3">3</option>
                     <option value="4">4</option>
@@ -5621,7 +5621,7 @@
                 <div class="ml-3">{{T1307}}. {{T1308}}</div>
                 <select id="dvi19" name="dvi19" class="selectclass">
                     <option value="-9">{{T1511}}</option>
-                    <option value="1{{dvi19-1}} >{{T1509}}</option>
+                    <option value="{{dvi19-1}} >{{T1509}}</option>
                     <option value="2">2</option>
                     <option value="3">3</option>
                     <option value="4">4</option>
@@ -5639,7 +5639,7 @@
                 <div class="ml-3">{{T1312}}. {{T1313}}</div>
                 <select id="dvi20" name="dvi20" class="selectclass">
                     <option value="-9">{{T1511}}</option>
-                    <option value="1{{dvi20-1}} >{{T1509}}</option>
+                    <option value="{{dvi20-1}} >{{T1509}}</option>
                     <option value="2">2</option>
                     <option value="3">3</option>
                     <option value="4">4</option>
@@ -5837,11 +5837,11 @@
                 <div>{{T1367}}. {{T1368}}</div>
                 <div class="col-span-1 flex items-center gap-4">
                     <div class="flex items-center">
-                        <input type="radio" id="cmgt2-1" name="cmgt2" value="{{}}-}}" class="valueclass">
+                        <input type="radio" id="cmgt2-1" name="cmgt2" value="{{cmgt2-1}}" class="valueclass">
                         <label for="cmgt2-1" class="labelclass">{{T1369}}</label>
                     </div>
                     <div class="flex items-center">
-                        <input type="radio" id="cmgt2-2" name="cmgt2" value="{{}}-}}" class="valueclass">
+                        <input type="radio" id="cmgt2-2" name="cmgt2" value="{{cmgt2-2}}" class="valueclass">
                         <label for="cmgt2-2" class="labelclass">{{T1370}}</label>
                     </div>
                 </div>
