--- a/src/templates/R/01_cpis.html
+++ b/src/templates/R/01_cpis.html
@@ -106,9 +106,9 @@
             <div class="divclass mt-6">
                 <div class="col-span-1">{{T0030}}. {{T0031}}</div>
                 <div>
-                    <select id="omr8" name="omr8" class="selectclass">
-                        <option value="{{omr8-1}}">{{T0032}}</option>
-                        <option value="{{omr8-2}}">{{T0033}}</option>
+                    <select id="omr8a" name="omr8a" class="selectclass">
+                        <option value="{{omr8a-1}}">{{T0032}}</option>
+                        <option value="{{omr8a-2}}">{{T0033}}</option>
                     </select>
                 </div>
             </div>
@@ -116,7 +116,7 @@
             <div class="divclass mt-6">
                 <div>{{T0035}}. {{T0036}}</div>
                 <div>
-                    <input type="text" id="omr9" name="omr9" class="inputclass w-full" />
+                    <input type="text" id="omr8" name="omr8" class="inputclass w-full" />
                 </div>
             </div>
 
@@ -179,6 +179,11 @@
 
             <div class="divclass mt-6">
                 <div>{{T0056}}. {{T0057}}</div>
+                <div class="flex items-center">
+                    <input type="checkbox" id="lk14a_out" name="lk14a_out" value="{{lk14a_out-1}}" class="cbclass">
+                    <label for="lk14a_out" class="labelclass">{{T1513}}</label>
+                </div>
+                <div></div>
                 <div class="flex items-center">
                     <input type="checkbox" id="lk14a_dk" name="lk14a_dk" value="{{lk14a_dk-1}}" class="cbclass">
                     <label for="lk14a_dk" class="labelclass">{{T0059}}</label>
@@ -401,6 +406,11 @@
 
             <div class="divclass mt-6">
                 <div>{{T0127}}. {{T0128}}</div>
+                <div class="flex items-center">
+                    <input type="checkbox" id="cm3a_out" name="cm3a_out" value="{{cm3a_out-1}}" class="cbclass">
+                    <label for="cm3a_out" class="labelclass">{{T1514}}</label>
+                </div>
+                <div></div>
                 <div class="flex items-center">
                     <input type="checkbox" id="cm3a_dk" name="cm3a_dk" value="{{cm3a_dk-1}}" class="cbclass">
                     <label for="cm3a_dk" class="labelclass">{{T0059}}</label>
@@ -1101,6 +1111,10 @@
                         <input type="radio" id="ct1c-3" name="ct1c" value="{{ct1c-3}}" class="valueclass">
                         <label for="ct1c-3" class="labelclass">{{T0279}}</label>
                     </div>
+                    <div class="flex items-center">
+                        <input type="radio" id="ct1c-4" name="ct1c" value="{{ct1c-4}}" class="valueclass">
+                        <label for="ct1c-4" class="labelclass">{{T1512}}</label>
+                    </div>
                 </div>
             </div>
             <div class="divclass mt-10">
@@ -1188,6 +1202,11 @@
 
             <div class="divclass mt-6">
                 <div>{{T0306}}. {{T0307}}</div>
+                <div class="flex items-center">
+                    <input type="checkbox" id="ct3a_out" name="ct3a_out" value="{{ct3a_out-1}}" class="cbclass">
+                    <label for="ct3a_out" class="labelclass">{{T1515}}</label>
+                </div>
+                <div></div>
                 <div class="flex items-center">
                     <input type="checkbox" id="ct3a_dk" name="ct3a_dk" value="{{ct3a_dk-1}}" class="cbclass">
                     <label for="ct3a_dk" class="labelclass">{{T0059}}</label>
@@ -2697,10 +2716,10 @@
                         <label for="sa4_8" class="labelclass">{{T0632}}</label>
                     </div>
                     <div class="flex items-center">
-                        <input type="checkbox" id="sa4_9" name="sa4_9" value="{{sa4_9-1}}" class="valueclass">
-                        <label for="sa4_9" class="labelclass">{{T0633}}</label>
+                        <input type="checkbox" id="sa4_10" name="sa4_10" value="{{sa4_10-1}}" class="valueclass">
+                        <label for="sa4_10" class="labelclass">{{T0633}}</label>
                     </div>
-                    <input type="text" id="sa4_9_other" name="sa4_9_other" class="inputclass w-full" />
+                    <input type="text" id="sa4_10_other" name="sa4_10_other" class="inputclass w-full" />
                 </div>
             </div>
 
@@ -3237,8 +3256,8 @@
                         <label for="qeduc2-2" class="labelclass">{{T0764}}</label>
                     </div>
                     <div class="flex items-center">
-                        <input type="radio" id="qeduc2-7" name="qeduc2disabled" value="{{qeduc2-7}}" class="valueclass">
-                        <label for="qeduc2-7" class="labelclass">{{T0765}}</label>
+                        <input type="radio" id="qeduc2-3" name="qeduc2" value="{{qeduc2-3}}" class="valueclass">
+                        <label for="qeduc2-3" class="labelclass">{{T0765}}</label>
                     </div>
                 </div>
             </div>
